[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Underlings/Imps/John_Imp.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 32 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -26.594 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false
collision_layer = 4096
collision_mask = 2051

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Hit_sfx_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
